--- a/Day2_Chatbot.ipynb
+++ b/Day2_Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoft0FHlmS+7M5QRIgv6vo",
+      "authorship_tag": "ABX9TyMcAItKCPgQ6dpjrFKTdMd6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -180,6 +180,7 @@
         "    messages.append(HumanMessage(content=user_input))\n",
         "    output = llm.invoke(messages)\n",
         "    messages.append(AIMessage(content=output.content))\n",
+        "    print(\"------------------Updating the Message List--------------------\")\n",
         "    print(output.content)\n",
         "    print(\"message List is\", messages)\n",
         "    user_input = input(\"Please enter your query or type 'exit' to end conversation\")"
@@ -189,18 +190,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eqG6dYuV1Ffw",
-        "outputId": "4b0872e8-71d1-4526-9ec5-e39746b37419"
+        "outputId": "93f612ed-d3a2-48b7-8a94-a8e1fd4fefb0"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Please enter your query or type 'exit' to end conversationHi I am Indu\n",
-            "Hi Indu! It's nice to meet you. How can I help you today? Let me know what you're interested in talking about or what you need help with.\n",
-            "Please enter your query or type 'exit' to end conversationDo you know my name\n",
-            "Yes, I know your name is Indu. You told me that!\n"
+            "Please enter your query or type 'exit' to end conversationHi I am indu\n",
+            "Hi Indu! It's nice to meet you. How can I help you today?\n",
+            "message List is [HumanMessage(content='Hi I am indu', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Hi Indu! It's nice to meet you. How can I help you today?\", additional_kwargs={}, response_metadata={})]\n",
+            "Please enter your query or type 'exit' to end conversationCan you tell me who i am \n",
+            "I'm sorry, but I can't tell you who you are. I am an AI and I don't have access to your personal information. I have no way of knowing your identity. You are the only one who knows who you are.\n",
+            "message List is [HumanMessage(content='Hi I am indu', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Hi Indu! It's nice to meet you. How can I help you today?\", additional_kwargs={}, response_metadata={}), HumanMessage(content='Can you tell me who i am ', additional_kwargs={}, response_metadata={}), AIMessage(content=\"I'm sorry, but I can't tell you who you are. I am an AI and I don't have access to your personal information. I have no way of knowing your identity. You are the only one who knows who you are.\", additional_kwargs={}, response_metadata={})]\n",
+            "Please enter your query or type 'exit' to end conversationexit\n"
           ]
         }
       ]
