--- a/Day2_Chatbot.ipynb
+++ b/Day2_Chatbot.ipynb
@@ -190,20 +190,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eqG6dYuV1Ffw",
-        "outputId": "93f612ed-d3a2-48b7-8a94-a8e1fd4fefb0"
+        "outputId": "9c7b63e8-ef69-4ac0-f2fc-ab6f3132cffa"
       },
-      "execution_count": 24,
+      "execution_count": 25,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Please enter your query or type 'exit' to end conversationHi I am indu\n",
+            "Please enter your query or type 'exit' to end conversationHi I am Indu\n",
+            "------------------Updating the Message List--------------------\n",
             "Hi Indu! It's nice to meet you. How can I help you today?\n",
-            "message List is [HumanMessage(content='Hi I am indu', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Hi Indu! It's nice to meet you. How can I help you today?\", additional_kwargs={}, response_metadata={})]\n",
-            "Please enter your query or type 'exit' to end conversationCan you tell me who i am \n",
-            "I'm sorry, but I can't tell you who you are. I am an AI and I don't have access to your personal information. I have no way of knowing your identity. You are the only one who knows who you are.\n",
-            "message List is [HumanMessage(content='Hi I am indu', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Hi Indu! It's nice to meet you. How can I help you today?\", additional_kwargs={}, response_metadata={}), HumanMessage(content='Can you tell me who i am ', additional_kwargs={}, response_metadata={}), AIMessage(content=\"I'm sorry, but I can't tell you who you are. I am an AI and I don't have access to your personal information. I have no way of knowing your identity. You are the only one who knows who you are.\", additional_kwargs={}, response_metadata={})]\n",
+            "message List is [HumanMessage(content='Hi I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Hi Indu! It's nice to meet you. How can I help you today?\", additional_kwargs={}, response_metadata={})]\n",
+            "Please enter your query or type 'exit' to end conversation Can you help me with my name\n",
+            "------------------Updating the Message List--------------------\n",
+            "Okay, I can try! What kind of help do you need with your name, Indu? Are you looking for:\n",
+            "\n",
+            "*   **Information about the name Indu?** (e.g., origin, meaning, popularity)\n",
+            "*   **Nicknames for Indu?**\n",
+            "*   **Names that are similar to Indu?**\n",
+            "*   **Help deciding if you want to change your name?**\n",
+            "*   **Something else entirely?**\n",
+            "\n",
+            "The more information you give me, the better I can assist you.\n",
+            "message List is [HumanMessage(content='Hi I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Hi Indu! It's nice to meet you. How can I help you today?\", additional_kwargs={}, response_metadata={}), HumanMessage(content=' Can you help me with my name', additional_kwargs={}, response_metadata={}), AIMessage(content='Okay, I can try! What kind of help do you need with your name, Indu? Are you looking for:\\n\\n*   **Information about the name Indu?** (e.g., origin, meaning, popularity)\\n*   **Nicknames for Indu?**\\n*   **Names that are similar to Indu?**\\n*   **Help deciding if you want to change your name?**\\n*   **Something else entirely?**\\n\\nThe more information you give me, the better I can assist you.', additional_kwargs={}, response_metadata={})]\n",
+            "Please enter your query or type 'exit' to end conversationtell me my firstname\n",
+            "------------------Updating the Message List--------------------\n",
+            "Your first name is Indu.\n",
+            "message List is [HumanMessage(content='Hi I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Hi Indu! It's nice to meet you. How can I help you today?\", additional_kwargs={}, response_metadata={}), HumanMessage(content=' Can you help me with my name', additional_kwargs={}, response_metadata={}), AIMessage(content='Okay, I can try! What kind of help do you need with your name, Indu? Are you looking for:\\n\\n*   **Information about the name Indu?** (e.g., origin, meaning, popularity)\\n*   **Nicknames for Indu?**\\n*   **Names that are similar to Indu?**\\n*   **Help deciding if you want to change your name?**\\n*   **Something else entirely?**\\n\\nThe more information you give me, the better I can assist you.', additional_kwargs={}, response_metadata={}), HumanMessage(content='tell me my firstname', additional_kwargs={}, response_metadata={}), AIMessage(content='Your first name is Indu.', additional_kwargs={}, response_metadata={})]\n",
             "Please enter your query or type 'exit' to end conversationexit\n"
           ]
         }
