--- a/Day2_Chatbot.ipynb
+++ b/Day2_Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcAItKCPgQ6dpjrFKTdMd6",
+      "authorship_tag": "ABX9TyNayXa6IcuKI43mKrylwpqR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,20 +162,31 @@
         "]\n",
         "\n",
         "# Instantiate a chat model and invoke it with the messages\n",
-        "output = llm.invoke(messages)"
+        "output = print(llm.invoke(messages))"
       ],
       "metadata": {
-        "id": "GUuAxS2mzRgU"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GUuAxS2mzRgU",
+        "outputId": "b95efb0c-a7ed-4d20-8aed-3597c8414ef1"
       },
-      "execution_count": 16,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "content='Artificial intelligence (AI) is a broad term that refers to the simulation of human intelligence in machines that are programmed to think and act like humans. It involves creating computer systems that can perform tasks that typically require human intelligence, such as:\\n\\n*   **Learning:** Acquiring information and rules for using the information.\\n*   **Reasoning:** Using rules to reach conclusions.\\n*   **Problem-solving:** Finding solutions to complex issues.\\n*   **Perception:** Interpreting sensory information, such as images, sounds, and text.\\n*   **Natural Language Processing (NLP):** Understanding and generating human language.\\n*   **Decision-making:** Choosing the best course of action from a set of options.\\n\\nIn simpler terms, AI aims to make computers smart enough to handle tasks that usually need a human brain.\\n\\n**Different Types of AI:**\\n\\nAI can be categorized in several ways. Here are a couple of common distinctions:\\n\\n*   **Narrow or Weak AI:** Designed and trained for a specific task. Most AI applications today fall into this category. Examples include spam filters, recommendation systems, and self-driving cars.\\n*   **General or Strong AI:** Possesses human-level intelligence and can perform any intellectual task that a human being can. This type of AI is still largely theoretical.\\n\\n**Key Goals of AI:**\\n\\n*   **Automate tasks:** Reduce human effort and improve efficiency.\\n*   **Improve decision-making:** Provide data-driven insights and predictions.\\n*   **Solve complex problems:** Tackle challenges that are beyond human capabilities.\\n*   **Enhance human capabilities:** Augment human intelligence and creativity.\\n\\n**AI is rapidly evolving and has the potential to transform many aspects of our lives, from healthcare and education to transportation and entertainment.**' additional_kwargs={} response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'model_name': 'gemini-2.0-flash', 'safety_ratings': []} id='run--6b26711f-627b-4492-860a-8a5aeecd00b7-0' usage_metadata={'input_tokens': 9, 'output_tokens': 366, 'total_tokens': 375, 'input_token_details': {'cache_read': 0}}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "from langchain_core.messages import HumanMessage, SystemMessage, AIMessage\n",
         "user_input = input(\"Please enter your query or type 'exit' to end conversation\")\n",
-        "messages = []\n",
         "while user_input != 'exit':\n",
         "    messages.append(HumanMessage(content=user_input))\n",
         "    output = llm.invoke(messages)\n",
@@ -189,39 +200,31 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "eqG6dYuV1Ffw",
-        "outputId": "9c7b63e8-ef69-4ac0-f2fc-ab6f3132cffa"
+        "outputId": "9eddf86b-89b3-4d27-c449-e2ad47c6c70a"
       },
-      "execution_count": 25,
+      "execution_count": 29,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Please enter your query or type 'exit' to end conversationHi I am Indu\n",
-            "------------------Updating the Message List--------------------\n",
-            "Hi Indu! It's nice to meet you. How can I help you today?\n",
-            "message List is [HumanMessage(content='Hi I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Hi Indu! It's nice to meet you. How can I help you today?\", additional_kwargs={}, response_metadata={})]\n",
-            "Please enter your query or type 'exit' to end conversation Can you help me with my name\n",
-            "------------------Updating the Message List--------------------\n",
-            "Okay, I can try! What kind of help do you need with your name, Indu? Are you looking for:\n",
-            "\n",
-            "*   **Information about the name Indu?** (e.g., origin, meaning, popularity)\n",
-            "*   **Nicknames for Indu?**\n",
-            "*   **Names that are similar to Indu?**\n",
-            "*   **Help deciding if you want to change your name?**\n",
-            "*   **Something else entirely?**\n",
-            "\n",
-            "The more information you give me, the better I can assist you.\n",
-            "message List is [HumanMessage(content='Hi I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Hi Indu! It's nice to meet you. How can I help you today?\", additional_kwargs={}, response_metadata={}), HumanMessage(content=' Can you help me with my name', additional_kwargs={}, response_metadata={}), AIMessage(content='Okay, I can try! What kind of help do you need with your name, Indu? Are you looking for:\\n\\n*   **Information about the name Indu?** (e.g., origin, meaning, popularity)\\n*   **Nicknames for Indu?**\\n*   **Names that are similar to Indu?**\\n*   **Help deciding if you want to change your name?**\\n*   **Something else entirely?**\\n\\nThe more information you give me, the better I can assist you.', additional_kwargs={}, response_metadata={})]\n",
-            "Please enter your query or type 'exit' to end conversationtell me my firstname\n",
-            "------------------Updating the Message List--------------------\n",
-            "Your first name is Indu.\n",
-            "message List is [HumanMessage(content='Hi I am Indu', additional_kwargs={}, response_metadata={}), AIMessage(content=\"Hi Indu! It's nice to meet you. How can I help you today?\", additional_kwargs={}, response_metadata={}), HumanMessage(content=' Can you help me with my name', additional_kwargs={}, response_metadata={}), AIMessage(content='Okay, I can try! What kind of help do you need with your name, Indu? Are you looking for:\\n\\n*   **Information about the name Indu?** (e.g., origin, meaning, popularity)\\n*   **Nicknames for Indu?**\\n*   **Names that are similar to Indu?**\\n*   **Help deciding if you want to change your name?**\\n*   **Something else entirely?**\\n\\nThe more information you give me, the better I can assist you.', additional_kwargs={}, response_metadata={}), HumanMessage(content='tell me my firstname', additional_kwargs={}, response_metadata={}), AIMessage(content='Your first name is Indu.', additional_kwargs={}, response_metadata={})]\n",
             "Please enter your query or type 'exit' to end conversationexit\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain_g"
+      ],
+      "metadata": {
+        "id": "0I2UMDCK9tOG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
