--- a/Day2_Chatbot.ipynb
+++ b/Day2_Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcsdgs4NRWEtj2DHyon2cX",
+      "authorship_tag": "ABX9TyNRQCo8z4Bcdn0/aFujCi8s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -480,11 +480,11 @@
         "pip install langchain_huggingface"
       ],
       "metadata": {
-        "id": "O3yGysQPod6z",
-        "outputId": "89c90fb6-da9a-48e6-d196-ed52b58e13e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "O3yGysQPod6z",
+        "outputId": "89c90fb6-da9a-48e6-d196-ed52b58e13e5"
       },
       "execution_count": 1,
       "outputs": [
@@ -534,11 +534,11 @@
         "pip install sentence-transformers"
       ],
       "metadata": {
-        "id": "h81J8OcronF9",
-        "outputId": "5450da99-1be8-4378-fb73-833a9797c18e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "h81J8OcronF9",
+        "outputId": "5450da99-1be8-4378-fb73-833a9797c18e"
       },
       "execution_count": 2,
       "outputs": [
@@ -644,11 +644,11 @@
         "pdf_search_tool = PDFSearchTool(config=config,pdf = \"/content/1706.03762v7.pdf\")"
       ],
       "metadata": {
-        "id": "E78pFa1FoxnH",
-        "outputId": "3bf514b6-620f-4fc6-93d1-e5edddc3a039",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "E78pFa1FoxnH",
+        "outputId": "3bf514b6-620f-4fc6-93d1-e5edddc3a039"
       },
       "execution_count": 4,
       "outputs": [
@@ -682,12 +682,12 @@
         "pdf_search_tool.run(\"what is formula for attention score\")"
       ],
       "metadata": {
-        "id": "plYgcMp1pJGK",
-        "outputId": "c1ba2beb-da08-46a4-96ca-d0ce14680d96",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 209
-        }
+        },
+        "id": "plYgcMp1pJGK",
+        "outputId": "c1ba2beb-da08-46a4-96ca-d0ce14680d96"
       },
       "execution_count": 5,
       "outputs": [
@@ -780,6 +780,29 @@
       ],
       "metadata": {
         "id": "X1V-DZZPqB9K"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Agent**\n"
+      ],
+      "metadata": {
+        "id": "4CsbCR5hrQV-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from crewai import Agent\n",
+        "Agent{\n",
+        "\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Yu5I5L2UrAhu"
       },
       "execution_count": null,
       "outputs": []
