--- a/Day2_Chatbot.ipynb
+++ b/Day2_Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRQCo8z4Bcdn0/aFujCi8s",
+      "authorship_tag": "ABX9TyPYoLtAsHuTYmgoYnKAWJVY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -796,15 +796,25 @@
     {
       "cell_type": "code",
       "source": [
+        "#creating Router Agent\n",
         "from crewai import Agent\n",
-        "Agent{\n",
-        "\n",
-        "}"
+        "router_agent = Agent(\n",
+        "    role = \"Router\",\n",
+        "    goal= \"route user questio to tool\",\n",
+        "    backstory= (\n",
+        "        \"you are expert in analysing user question\"\n",
+        "        \"for a given user query , you need to suggest which tool we need to use\"\n",
+        "        \"available tools are web_search tool , pdf_search tool and generation tool\"\n",
+        "    ),\n",
+        "    verbose=True,\n",
+        "    llm=llm,\n",
+        "    allow_delegation=True,\n",
+        ")"
       ],
       "metadata": {
-        "id": "Yu5I5L2UrAhu"
+        "id": "2dCDZfI2szK9"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     }
   ]
