--- a/Day2_Chatbot.ipynb
+++ b/Day2_Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYoLtAsHuTYmgoYnKAWJVY",
+      "authorship_tag": "ABX9TyMcRYDfvxDAu631373Ugluj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -648,29 +648,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E78pFa1FoxnH",
-        "outputId": "3bf514b6-620f-4fc6-93d1-e5edddc3a039"
+        "outputId": "27588bfb-0ab8-4a4a-c0b2-e453a945a5ea"
       },
-      "execution_count": 4,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.11/dist-packages/pydantic/fields.py:1093: PydanticDeprecatedSince20: Using extra keyword arguments on `Field` is deprecated and will be removed. Use `json_schema_extra` instead. (Extra keys: 'required'). Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.11/migration/\n",
-            "  warn(\n",
-            "/usr/local/lib/python3.11/dist-packages/embedchain/embedder/huggingface.py:34: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
-            "  embeddings = HuggingFaceEmbeddings(model_name=self.config.model, model_kwargs=self.config.model_kwargs)\n",
-            "/usr/local/lib/python3.11/dist-packages/huggingface_hub/utils/_auth.py:94: UserWarning: \n",
-            "The secret `HF_TOKEN` does not exist in your Colab secrets.\n",
-            "To authenticate with the Hugging Face Hub, create a token in your settings tab (https://huggingface.co/settings/tokens), set it as secret in your Google Colab and restart your session.\n",
-            "You will be able to reuse this secret in all of your notebooks.\n",
-            "Please note that authentication is recommended but still optional to access public models or datasets.\n",
-            "  warnings.warn(\n",
             "/usr/local/lib/python3.11/dist-packages/alembic/config.py:592: DeprecationWarning: No path_separator found in configuration; falling back to legacy splitting on spaces, commas, and colons for prepend_sys_path.  Consider adding path_separator=os to Alembic config.\n",
-            "  util.warn_deprecated(\n",
-            "Inserting batches in chromadb:   0%|          | 0/1 [00:00<?, ?it/s]/usr/local/lib/python3.11/dist-packages/chromadb/types.py:144: PydanticDeprecatedSince211: Accessing the 'model_fields' attribute on the instance is deprecated. Instead, you should access this attribute from the model class. Deprecated in Pydantic V2.11 to be removed in V3.0.\n",
-            "  return self.model_fields  # pydantic 2.x\n",
-            "Inserting batches in chromadb: 100%|██████████| 1/1 [00:06<00:00,  6.88s/it]\n"
+            "  util.warn_deprecated(\n"
           ]
         }
       ]
@@ -781,7 +768,7 @@
       "metadata": {
         "id": "X1V-DZZPqB9K"
       },
-      "execution_count": 11,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -814,8 +801,131 @@
       "metadata": {
         "id": "2dCDZfI2szK9"
       },
-      "execution_count": 17,
+      "execution_count": 20,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#creating Retriever Agent\n",
+        "from crewai import Agent\n",
+        "retriever_agent = Agent(\n",
+        "    role = \"Retriever\",\n",
+        "    goal= \"Pick correct tool and retriev imformation to answer user question\",\n",
+        "    backstory= (\n",
+        "        \"you are expert in answering the questions\"\n",
+        "        \"use the retrived information to answer user question\"\n",
+        "    ),\n",
+        "    verbose=True,\n",
+        "    llm=llm,\n",
+        "    allow_delegation=True,\n",
+        "    tools=[SearchTool(),pdf_search_tool,GenerationTool()]\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "bx1UuNcBvgf5"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**TASK**"
+      ],
+      "metadata": {
+        "id": "YIZZ0FYQztuO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from crewai import Task\n",
+        "router_task = Task(\n",
+        "    description=(\n",
+        "        \"analyse context and keywords present in question {question}\"\n",
+        "        \"based on context and keywords decide whether it is eligible for vectorstore, web-search or generation\"\n",
+        "        \"return a single word 'vectorstore' if it is eligible for vectorstore\"\n",
+        "        \"return a single word 'web-search' if it is eligible for web-search\"\n",
+        "        \"return a single word 'generation' if it is eligible for generation\"\n",
+        "    ),\n",
+        "    expected_output=(\n",
+        "        \"a single word from list ['vectorstore', 'web-search', 'generation']\"\n",
+        "    ),\n",
+        "    agent = router_agent,\n",
+        "    verbose = True\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "n2VLI4fSzwCA"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from crewai import Task\n",
+        "reteriver_task = Task(\n",
+        "    description=(\n",
+        "        \"based on response from router agent , extract information for user question {question} with help of respective tool \"\n",
+        "        \"if router task output is 'vectorstore' then call 'pdf_search_tool' to retreive information \"\n",
+        "        \"if router task output is 'web-search' then call 'SearchTool' to retreive information \"\n",
+        "        \"if router task output is 'generation' then call 'GenerationTool' to retreive information \"\n",
+        "    ),\n",
+        "    expected_output=(\n",
+        "        \"return a clear and concise tresponse after using correct tool \"\n",
+        "    ),\n",
+        "    agent = retriever_agent,\n",
+        "    context = [router_task],\n",
+        "    verbose=True,\n",
+        "\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "DOOzDss81spG"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Create Crew Object**"
+      ],
+      "metadata": {
+        "id": "_dz25hCu4txr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from crewai import Crew\n",
+        "  crewobject = Crew(\n",
+        "      agents = [router_agent,retriever_agent],\n",
+        "      tasks = [reteriver_task,router_task],\n",
+        "      verbose = True,\n",
+        "  )"
+      ],
+      "metadata": {
+        "id": "0zxw4YD64tTB",
+        "outputId": "706893ac-2faa-490a-c77b-84bb73c178bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "unexpected indent (ipython-input-38-2729445014.py, line 2)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-38-2729445014.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    crewobject = Crew(\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+          ]
+        }
+      ]
     }
   ]
 }
