--- a/Day2_Chatbot.ipynb
+++ b/Day2_Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcRYDfvxDAu631373Ugluj",
+      "authorship_tag": "ABX9TyPQobyXBUy9Oddq6foSD4ch",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -901,19 +901,20 @@
       "cell_type": "code",
       "source": [
         "from crewai import Crew\n",
-        "  crewobject = Crew(\n",
-        "      agents = [router_agent,retriever_agent],\n",
-        "      tasks = [reteriver_task,router_task],\n",
-        "      verbose = True,\n",
-        "  )"
+        "crew_object= Crew(\n",
+        "    agents=[router_agent,retriever_agent],\n",
+        "    tasks=[router_task,reteriver_task],\n",
+        "    verbose=True,\n",
+        "\n",
+        ")"
       ],
       "metadata": {
-        "id": "0zxw4YD64tTB",
-        "outputId": "706893ac-2faa-490a-c77b-84bb73c178bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 106
-        }
+        },
+        "id": "0zxw4YD64tTB",
+        "outputId": "706893ac-2faa-490a-c77b-84bb73c178bf"
       },
       "execution_count": 38,
       "outputs": [
