--- a/Day2_Chatbot.ipynb
+++ b/Day2_Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQobyXBUy9Oddq6foSD4ch",
+      "authorship_tag": "ABX9TyMatt8x6svf7dSETebKiIdQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -235,9 +235,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "4f03c217-949e-4b3a-c069-d32d1f28b618"
+        "outputId": "4f03c217-949e-4b3a-c069-d32d1f28b618",
+        "collapsed": true
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,9 +485,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O3yGysQPod6z",
-        "outputId": "89c90fb6-da9a-48e6-d196-ed52b58e13e5"
+        "outputId": "89c90fb6-da9a-48e6-d196-ed52b58e13e5",
+        "collapsed": true
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,9 +540,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h81J8OcronF9",
-        "outputId": "5450da99-1be8-4378-fb73-833a9797c18e"
+        "outputId": "5450da99-1be8-4378-fb73-833a9797c18e",
+        "collapsed": true
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,12 +612,12 @@
       "source": [
         "## create a LLM object using groq\n",
         "from crewai import LLM\n",
-        "llm = LLM(model= \"groq/llama-3.3-70b-versatile\")"
+        "llm = LLM(model= \"groq/gemma2-9b-it\", api_key=\"\")"
       ],
       "metadata": {
         "id": "2Q9bZ_XOosa6"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -650,7 +653,7 @@
         "id": "E78pFa1FoxnH",
         "outputId": "27588bfb-0ab8-4a4a-c0b2-e453a945a5ea"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -676,7 +679,7 @@
         "id": "plYgcMp1pJGK",
         "outputId": "c1ba2beb-da08-46a4-96ca-d0ce14680d96"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -709,7 +712,7 @@
       "metadata": {
         "id": "9t-7hEexpMwk"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -720,7 +723,7 @@
       "metadata": {
         "id": "A7oYuIsXpR4x"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -747,7 +750,7 @@
       "metadata": {
         "id": "EtAQiQpVpbG3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -768,7 +771,7 @@
       "metadata": {
         "id": "X1V-DZZPqB9K"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -801,7 +804,7 @@
       "metadata": {
         "id": "2dCDZfI2szK9"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -825,7 +828,7 @@
       "metadata": {
         "id": "bx1UuNcBvgf5"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -859,7 +862,7 @@
       "metadata": {
         "id": "n2VLI4fSzwCA"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -885,7 +888,7 @@
       "metadata": {
         "id": "DOOzDss81spG"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -916,7 +919,7 @@
         "id": "0zxw4YD64tTB",
         "outputId": "706893ac-2faa-490a-c77b-84bb73c178bf"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
