--- a/Day2_Chatbot.ipynb
+++ b/Day2_Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOHkjY5FpZh4DxMfb2TybY",
+      "authorship_tag": "ABX9TyO30JirdSJ2/N3dE+lHuL18",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1161,7 +1161,7 @@
     {
       "cell_type": "code",
       "source": [
-        "result = crew_object.kickoff(inputs={\"question\": \"what is President of USA?\"})"
+        "crew_object.kickoff(inputs={\"question\": \"what is President of USA?\"})"
       ],
       "metadata": {
         "colab": {
