--- a/Day2_Chatbot.ipynb
+++ b/Day2_Chatbot.ipynb
@@ -916,6 +916,17 @@
       },
       "execution_count": 24,
       "outputs": []
-    }
+    },
+   {
+        "cell_type": "code",
+        "source": [
+          "result = crew_object.kickoff(inputs={"question": "what is python"})"
+        ],
+        "metadata": {
+          "id": "0zxw4YD64tTjjB"
+        },
+        "execution_count": 24,
+        "outputs": []
+      }
   ]
 }
