--- a/Day2_Chatbot.ipynb
+++ b/Day2_Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMatt8x6svf7dSETebKiIdQ",
+      "authorship_tag": "ABX9TyOBVtOvKJcrawqtucqgGBtf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -914,7 +914,18 @@
       "metadata": {
         "id": "0zxw4YD64tTB"
       },
-      "execution_count": 24,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = crew_object.kickoff(inputs={\"question\": \"what is python\"})"
+      ],
+      "metadata": {
+        "id": "zR1h6B4_N69d"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
