--- a/Day2_Chatbot.ipynb
+++ b/Day2_Chatbot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBVtOvKJcrawqtucqgGBtf",
+      "authorship_tag": "ABX9TyPBdHlQD+fbB2y5l9atTkbj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -822,7 +822,7 @@
         "    verbose=True,\n",
         "    llm=llm,\n",
         "    allow_delegation=True,\n",
-        "    tools=[SearchTool(),pdf_search_tool,GenerationTool()]\n",
+        "    tools=[GenerationTool(), SearchTool(),pdf_search_tool]\n",
         ")"
       ],
       "metadata": {
@@ -853,7 +853,7 @@
         "        \"return a single word 'generation' if it is eligible for generation\"\n",
         "    ),\n",
         "    expected_output=(\n",
-        "        \"a single word from list ['vectorstore', 'web-search', 'generation']\"\n",
+        "        \"a single word from list ['vectorstore', 'generation', 'web-search']\"\n",
         "    ),\n",
         "    agent = router_agent,\n",
         "    verbose = True\n",
