--- a/Day3_langgraph_assignment.ipynb
+++ b/Day3_langgraph_assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnWETe/xfjryxvQojYTWuK",
+      "authorship_tag": "ABX9TyOaWG40DksBW4QmQJRsMCPk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -467,7 +467,7 @@
     {
       "cell_type": "code",
       "source": [
-        "agent = create_react_agent(model=llm,tools = [search_tool])"
+        "agent = create_react_agent(model=llm,tools = [search_tool, generation_search])"
       ],
       "metadata": {
         "id": "h6EdOM5hEOcE"
