--- a/Day3_langgraph_assignment.ipynb
+++ b/Day3_langgraph_assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaWG40DksBW4QmQJRsMCPk",
+      "authorship_tag": "ABX9TyMFRD+NTWuBlRqn+WVV1AbV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -368,16 +368,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Rh7d2TZaEDkT",
-        "outputId": "aa83b373-6ad7-4e4b-b496-f67dbb57c223"
+        "outputId": "e1bfae40-e783-4f70-98cb-6bc56cf1639b"
       },
-      "execution_count": 8,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting langchain_tavily\n",
-            "  Downloading langchain_tavily-0.2.11-py3-none-any.whl.metadata (22 kB)\n",
+            "Requirement already satisfied: langchain_tavily in /usr/local/lib/python3.11/dist-packages (0.2.11)\n",
             "Requirement already satisfied: aiohttp<4.0.0,>=3.11.14 in /usr/local/lib/python3.11/dist-packages (from langchain_tavily) (3.12.14)\n",
             "Requirement already satisfied: langchain<0.4.0,>=0.3.20 in /usr/local/lib/python3.11/dist-packages (from langchain_tavily) (0.3.27)\n",
             "Requirement already satisfied: langchain-core<0.4.0,>=0.3.15 in /usr/local/lib/python3.11/dist-packages (from langchain_tavily) (0.3.72)\n",
@@ -414,10 +413,7 @@
             "Requirement already satisfied: anyio in /usr/local/lib/python3.11/dist-packages (from httpx<1,>=0.23.0->langsmith>=0.1.17->langchain<0.4.0,>=0.3.20->langchain_tavily) (4.9.0)\n",
             "Requirement already satisfied: httpcore==1.* in /usr/local/lib/python3.11/dist-packages (from httpx<1,>=0.23.0->langsmith>=0.1.17->langchain<0.4.0,>=0.3.20->langchain_tavily) (1.0.9)\n",
             "Requirement already satisfied: h11>=0.16 in /usr/local/lib/python3.11/dist-packages (from httpcore==1.*->httpx<1,>=0.23.0->langsmith>=0.1.17->langchain<0.4.0,>=0.3.20->langchain_tavily) (0.16.0)\n",
-            "Requirement already satisfied: sniffio>=1.1 in /usr/local/lib/python3.11/dist-packages (from anyio->httpx<1,>=0.23.0->langsmith>=0.1.17->langchain<0.4.0,>=0.3.20->langchain_tavily) (1.3.1)\n",
-            "Downloading langchain_tavily-0.2.11-py3-none-any.whl (26 kB)\n",
-            "Installing collected packages: langchain_tavily\n",
-            "Successfully installed langchain_tavily-0.2.11\n"
+            "Requirement already satisfied: sniffio>=1.1 in /usr/local/lib/python3.11/dist-packages (from anyio->httpx<1,>=0.23.0->langsmith>=0.1.17->langchain<0.4.0,>=0.3.20->langchain_tavily) (1.3.1)\n"
           ]
         }
       ]
@@ -442,14 +438,14 @@
       "metadata": {
         "id": "xoa4KlWzEIS9"
       },
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "from langchain_community import GenerationSearch\n",
+        "# create Geaneator search tool from LLM\n",
+        "from langchain_community import GeneratorSearch\n",
         "from langchain.tools import tool\n",
         "\n",
         "@tool\n",
@@ -459,10 +455,38 @@
         "    return result"
       ],
       "metadata": {
-        "id": "P0QOWdw3E8IV"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 385
+        },
+        "id": "P0QOWdw3E8IV",
+        "outputId": "5fada93c-f349-4dd0-b747-096fd6c28711"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ImportError",
+          "evalue": "cannot import name 'GeneratorSearch' from 'langchain_community' (/usr/local/lib/python3.11/dist-packages/langchain_community/__init__.py)",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-14-1268859210.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mlangchain_community\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGeneratorSearch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mlangchain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtools\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtool\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m@\u001b[0m\u001b[0mtool\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mgeneration_search\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mImportError\u001b[0m: cannot import name 'GeneratorSearch' from 'langchain_community' (/usr/local/lib/python3.11/dist-packages/langchain_community/__init__.py)",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -473,6 +497,26 @@
         "id": "h6EdOM5hEOcE"
       },
       "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Agent**"
+      ],
+      "metadata": {
+        "id": "xEG_GItFGrU_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "state = agent.invoke({\"messages\":[{\"role\":\"user\",\"content\":\"what is captial of USA?\"}]})"
+      ],
+      "metadata": {
+        "id": "G73w8anpGtHl"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
