--- a/Day4_AgenticAI_Langgraph.ipynb
+++ b/Day4_AgenticAI_Langgraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPt6s3pzJvVOqC1vSqupBmi",
+      "authorship_tag": "ABX9TyMD9cz3OQQPA9+dUv2XDHYg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -191,6 +191,21 @@
       ],
       "metadata": {
         "id": "7ts-qxA6ps0J"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#create Stategraph\n",
+        "class state(TypedDict):\n",
+        "  messages: Annotated[list[str], add_messages]\n",
+        "  user_input: str\n",
+        "  message_type: str"
+      ],
+      "metadata": {
+        "id": "3mI0HlWer56Y"
       },
       "execution_count": null,
       "outputs": []
