--- a/Day4_AgenticAI_Langgraph.ipynb
+++ b/Day4_AgenticAI_Langgraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMD9cz3OQQPA9+dUv2XDHYg",
+      "authorship_tag": "ABX9TyMmTh/VQsKQP7smIxmxBH4Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -206,6 +206,18 @@
       ],
       "metadata": {
         "id": "3mI0HlWer56Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+        "llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash\", api_key=\"AIzaSyCqR9fMxH6ye2rnvkiNS7vFeRPPasTCkiU\")"
+      ],
+      "metadata": {
+        "id": "VWWUoKpvtvQT"
       },
       "execution_count": null,
       "outputs": []
