--- a/Day4_AgenticAI_Langgraph.ipynb
+++ b/Day4_AgenticAI_Langgraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmTh/VQsKQP7smIxmxBH4Q",
+      "authorship_tag": "ABX9TyOGOolSk28DJJdYls98hpKr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
+        "collapsed": true,
         "outputId": "155b70ff-e490-4601-8456-4a80ca8e922a"
       },
       "outputs": [
@@ -187,12 +188,13 @@
         "from typing_extensions import TypedDict\n",
         "from langgraph.graph import StateGraph, START, END\n",
         "from langgraph.graph.message import add_messages\n",
+        "from pydantic import BaseModel, Field\n",
         "from langchain.schema import HumanMessage, SystemMessage"
       ],
       "metadata": {
         "id": "7ts-qxA6ps0J"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -207,17 +209,41 @@
       "metadata": {
         "id": "3mI0HlWer56Y"
       },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#create llm\n",
+        "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+        "llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash\", api_key=\"AIzaSyCqR9fMxH6ye2rnvkiNS7vFeRPPasTCkiU\")"
+      ],
+      "metadata": {
+        "id": "VWWUoKpvtvQT"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#llm.invoke(\"what is capital of india\")"
+      ],
+      "metadata": {
+        "id": "oiZscsYuvD0d"
+      },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "from langchain_google_genai import ChatGoogleGenerativeAI\n",
-        "llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash\", api_key=\"AIzaSyCqR9fMxH6ye2rnvkiNS7vFeRPPasTCkiU\")"
+        "class MessageClassifier(BaseModel):\n",
+        "  message_type: Literal[\"vector_db\", \"web_search\", \"generic_search\"]=Field(description=\"classify the message\")"
       ],
       "metadata": {
-        "id": "VWWUoKpvtvQT"
+        "id": "vgDxksI2vE4o"
       },
       "execution_count": null,
       "outputs": []
